--- a/bootstrap.css
+++ b/bootstrap.css
@@ -1,1 +1,158 @@
+Body{
+  font: 15px/1 Arial, Helvetica, sans-serif;
+  padding:0;
+  margin:0;
+  background-color:#f4f4f4;
+  text-align: center;
+}
+
+/* Global */
+.container{
+  width:80%;
+  margin:auto;
+  overflow:hidden;
+}
+ul{
+   margin:0;
+   padding:5;
+}
+header li{
+  float:left; display:inline;
+  padding: 0 10 0 10;
+
+}
+.dark{
+  padding:15px;
+  background:#35424a;
+  color:#ffffff;
+  margin-top:10px;
+  margin-bottom:10px;
+  font-size: 16px;
+}
+.item img{
+  width: 100%;
+  overflow: hidden;
+  max-height: 400px;
+
+}
+/* Header **/
+header{
+  background:#35424a;
+  color:#ffffff;
+  padding-top:30px;
+  min-height:70px;
+  border-bottom:#e8491d 4px solid;
+}
+header a{
+  color:#ffffff;
+  text-decoration:none;
+  text-transform:uppercase;
+  font-size:13px;
+  padding:10px;
+}
+
+header #branding{
+  float:left;
+}
+header #branding h1{
+  margin:0;
+}
+header nav{
+  float:right;
+  margin-top: 20px;
+
+
+}
+header .highlight,  header .current a{
+  color:#e8491d;
+  font-weight: bold;
+
+
+}
+header a:hover{
+  color:#cccccc;
+  font-weight: bold;
+
+}
+#showcase{
+  min-height:300px;
+  background-color:#186700;
+  text-align: center;
+  border-bottom:#e8491d 4px solid;
+
+}
+#showcase h1{
+  margin-top:80px;
+  font-size: 45px;
+  margin-bottom: 10px;
+
+}
+#showcase p{
+  font-size: 30px;
+  font-weight: bold;
+  color:#e8491d;
+}
+#showcase h1 {
+  text-shadow: 2px 2px 3px red;
+}
+#newsletter p{
+  font-size: 20px;
+}
+#newsletter {
+  padding:15px;
+  color:#ffffff;
+  background:#35424a;
+  text-align: center;
+}
+
+#boxes .box img{
+  width: 140px;
+  height: 150px;
+  border-radius: 20%;
+  border: 3px green solid;
+}
+#boxes .box{
+  float: left;
+  text-align: center;
+  width:30%;
+  padding:5px;
+  margin-top: 20px;
+}
+footer{
+  padding: 20px;
+  margin-top: 20px;
+  color: #ffffff;
+  background-color: #e8491d;
+  text-align: center;
+}
+
+ header{
+   padding-bottom:20px;
+ }
+ #showcase h1{
+   margin-top:40px;
+ }
+ #services {
+   padding: 20px;
+   width:auto;
+   letter-spacing: 1.5 px;
+   line-height: 20px;
+   font-size: 20px;
+   font-weight: bold;
+   
+
+ }
+
+ /* Media Queries */
+ @media(max-width: 768px){
+  header #branding,
+  header nav,
+  header nav li,
+  #newsletter h1,
+  #newsletter form,
+  #boxes .box {
+    float:none;
+    text-align:center;
+    width:100%;
+  }
 
